--- a/.config/picom/picom.conf
+++ b/.config/picom/picom.conf
@@ -1,7 +1,13 @@
 # https://gist.github.com/kelleyk/6beba22586ac0c40aa30
 
 # Backend/performance options
-backend = "xrender";
+backend = "glx";
+glx-no-stencil = true;
+glx-copy-from-front = false;
+glx-no-rebind-pixmap = true;
+refresh-rate = 0;
+vsync = true;
+dbe =false;
 
 frame-opacity = 0.5;
 
