--- a/.config/picom/picom.conf
+++ b/.config/picom/picom.conf
@@ -16,7 +16,7 @@ shadow-offset-x = +3;
 shadow-offset-y = +3;
 
 opacity-rule = [
-  "90:class_g *= 'st-256color'",
+  # "90:class_g *= 'st-256color'",
   "90:class_g *= 'XTerm'",
   "90:class_g *= 'Zathura'"
 ];
