--- a/.config/picom/picom.conf
+++ b/.config/picom/picom.conf
@@ -16,14 +16,13 @@ shadow-offset-x = +3;
 shadow-offset-y = +3;
 
 opacity-rule = [
-  # "90:class_g *= 'st-256color'",
   "90:class_g *= 'XTerm'",
   "90:class_g *= 'Zathura'"
 ];
 
 corner-radius = 5.0;
 rounded-corners-exclude = [
-  "class_g = 'XNots'",
+  "class_g = 'dwm'",
   "class_g = 'dmenu'",
 ];
 round-borders = 1;
