--- a/.config/picom/picom.conf
+++ b/.config/picom/picom.conf
@@ -6,7 +6,7 @@ glx-no-stencil = true;
 glx-copy-from-front = false;
 glx-no-rebind-pixmap = true;
 refresh-rate = 0;
-vsync = true;
+vsync = false;
 dbe =false;
 
 shadow = true;
