--- a/.config/picom/picom.conf
+++ b/.config/picom/picom.conf
@@ -15,6 +15,10 @@ shadow-opacity = 0.33;
 shadow-offset-x = +3;
 shadow-offset-y = +3;
 
+shadow-exclude = [
+  "class_g = 'Firefox'",
+];
+
 opacity-rule = [
   "90:class_g *= 'XTerm'",
   "90:class_g *= 'Zathura'"
@@ -24,6 +28,7 @@ corner-radius = 5.0;
 rounded-corners-exclude = [
   "class_g = 'dwm'",
   "class_g = 'dmenu'",
+  "class_g = 'Firefox'",
 ];
 round-borders = 1;
 
