--- a/.config/picom/picom.conf
+++ b/.config/picom/picom.conf
@@ -16,7 +16,7 @@ shadow-offset-x = +3;
 shadow-offset-y = +3;
 
 shadow-exclude = [
-  "class_g = 'Firefox'",
+  "class_g = 'Firefox' && argb",
 ];
 
 opacity-rule = [
@@ -28,7 +28,7 @@ corner-radius = 5.0;
 rounded-corners-exclude = [
   "class_g = 'dwm'",
   "class_g = 'dmenu'",
-  "class_g = 'Firefox'",
+  "class_g = 'Firefox' && argb",
 ];
 round-borders = 1;
 
