--- a/.config/alacritty/alacritty.toml
+++ b/.config/alacritty/alacritty.toml
@@ -1,12 +1,13 @@
-window = { opacity = 0.9 }
+[window]
+opacity = 0.9
+
+[cursor]
+style = { shape = "Beam", blinking = "Always" }
 
 [font]
 size = 7.0
 [font.normal]
 family = "Hack Nerd Font Mono"
-
-[cursor]
-style = { shape = "Beam", blinking = "Always" }
 
 [keyboard]
 bindings = [
