--- a/.config/picom/picom.conf
+++ b/.config/picom/picom.conf
@@ -1,10 +1,8 @@
-# https://gist.github.com/kelleyk/6beba22586ac0c40aa30
-
 # Backend/performance options
 backend = "glx";
 glx-no-stencil = true;
-glx-copy-from-front = false;
 glx-no-rebind-pixmap = true;
+glx-copy-from-front = false;
 refresh-rate = 0;
 vsync = false;
 dbe =false;
@@ -25,11 +23,14 @@ rounded-corners-exclude = [
   "class_g = 'dwm'",
   "class_g = 'dmenu'",
 ];
-round-borders = 1;
 
 wintypes:
 {
-  dnd = { shadow = false; };
+  tooltip       = { shadow = false; opacity = 1.0; };
+  dock          = { shadow = false; };
+  dnd           = { shadow = false; };
+  menu          = { shadow = false; };
   dropdown_menu = { shadow = false; };
-  popup_menu =  { shadow = false; };
+  popup_menu    = { shadow = false; };
+  utility       = { shadow = false; };
 };
