--- a/.config/picom/picom.conf
+++ b/.config/picom/picom.conf
@@ -8,10 +8,10 @@ vsync = false;
 dbe =false;
 
 shadow = true;
-shadow-radius = 3;
-shadow-opacity = 0.33;
-shadow-offset-x = +3;
-shadow-offset-y = +3;
+shadow-radius = 8;
+shadow-opacity = 0.6;
+shadow-offset-x = -3;
+shadow-offset-y = -3;
 
 opacity-rule = [
   "90:class_g *= 'XTerm'",
